--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
         <h2>We Value Your Suggestions!</h2>
         <p>Please share your thoughts to help us improve Statenet.</p>
-        <form action="submit_suggestion.php" method="POST">
+        <form action="https://formspree.io/f/mnnpqele" method="POST">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="suggestion" placeholder="Your Suggestion" rows="5" required></textarea>
