added phone input

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <form action="https://formspree.io/f/mnnpqele" method="POST">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
+            <input type="tel" name="phone" placeholder="Your Phone Number" required>
             <textarea name="suggestion" placeholder="Your Suggestion" rows="5" required></textarea>
             <button type="submit">Submit</button>
         </form>
